--- a/style.css
+++ b/style.css
@@ -930,10 +930,11 @@ canvas {
     width: 600px; /* Adjust the width as needed */
     height: 600px; /* Adjust the height as needed */
     margin: 20px auto; /* Center the container */
-    border: 2px solid #ccc; /* Add a border */
+    border: 2px solid #ff004f; /* Add a border */
     border-radius: 10px; /* Rounded corners */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add a shadow */
     overflow: hidden; /* Ensure the canvas stays within the box */
+    position: relative;
 }
 
 /* Canvas wrapper */
@@ -954,36 +955,22 @@ canvas {
     margin: 0 10px;
     cursor: pointer;
     border: none;
-    background-color: #007bff;
+    background-color: #ff004f;
     color: white;
     border-radius: 5px;
     font-size: 16px;
 }
 
 .gumball-button:hover {
-    background-color: #0056b3;
+    background-color: #db0045;
 }
 
-
-/* Slideshow container */
-.slideshow-container {
-    max-width: 1000px;
-    position: relative;
-    margin: auto;
-  }
-  
-  /* Hide the images by default */
-  .mySlides {
-    display: none;
-  }
-  
-  /* Next & previous buttons */
-  .prev, .next {
+/* Next & previous buttons */
+.prev, .next {
     cursor: pointer;
     position: absolute;
     top: 50%;
     width: auto;
-    margin-top: -22px;
     padding: 16px;
     color: white;
     font-weight: bold;
@@ -1003,53 +990,22 @@ canvas {
   .prev:hover, .next:hover {
     background-color: rgba(0,0,0,0.8);
   }
-  
-  /* Caption text */
-  .text {
-    color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
+
+
+  #gumball-caption {
     position: absolute;
-    bottom: 8px;
-    width: 100%;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 18px;
     text-align: center;
-  }
-  
-  /* Number text (1/3 etc) */
-  .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-  }
-  
-  /* The dots/bullets/indicators */
-  .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-  }
-  
-  .active, .dot:hover {
-    background-color: #717171;
-  }
-  
-  /* Fading animation */
-  .fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
-  }
-  
-  @keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
-  }
+    max-width: 80%;
+}
+
+
 
 
 
